Restored convert hostnames to ID functionality

--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -177,7 +177,7 @@ actions:
     input:
       agent_array:
         title: Agent Array
-        description: Asset IDs to quarantine or unquarantine
+        description: Agent hostnames to quarantine or unquarantine
         type: "[]string"
         required: true
         example: ["abcdef123", "abcdef123"]
