--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -4,8 +4,8 @@ products: [insightconnect]
 name: rapid7_insight_agent
 title: Rapid7 Insight Agent
 description: Using the Insight Agent plugin from InsightConnect, you can quarantine, unquarantine and monitor potentially malicious IPs, addresses, hostnames, and devices across your organization
-version: 1.1.1
-supported_versions: ["Rapid7 Insight Agent 2022-04-06"]
+version: 1.2.0
+supported_versions: ["Rapid7 Insight Agent 2023-04-06"]
 vendor: rapid7
 support: rapid7
 status: []
@@ -171,6 +171,49 @@ connection:
       - Australia
       - Japan
 actions:
+  quarantine_multiple:
+    title: Quarantine Multiple
+    description: Quarantine or unquarantine multiple hosts
+    input:
+      agent_array:
+        title: Agent Array
+        description: Agent hostnames to quarantine or unquarantine
+        type: "[]string"
+        required: true
+        example: ["abcdef123", "abcdef123"]
+      interval:
+        title: Interval
+        description: Length of time in seconds to try to take action on a device. This is also called Advertisement Period
+        type: int
+        default: 604800
+        example: 604800
+        required: true
+      quarantine_state:
+        title: Quarantine State
+        description: Set to true to quarantine a host, set to false to unquarantine
+        type: boolean
+        default: true
+        example: true
+        required: true
+    output:
+      success:
+        title: Successful (Un)Quarantine
+        description: List of successfully quarantined hosts
+        type: "[]string"
+        example: ["abcdef123"]
+        required: false
+      failure:
+        title: Unsuccessful (Un)Quarantine
+        description: List of unsuccessfully quarantined hosts
+        type: "[]string"
+        example: ["abcdef123"]
+        required: false
+      all_operations_succeeded:
+        title: All Operations Succeeded
+        description: Informs a user any operations failed the (un)quarantine operations
+        type: boolean
+        example: true
+        required: false
   get_agent_details:
     title: Get Agent Details
     description: This action is used to find and display detailed information about a device
@@ -186,6 +229,7 @@ actions:
         title: Agent
         description: Agent information
         type: agent
+        example: {}
         required: true
   quarantine:
     title: Quarantine
@@ -218,6 +262,7 @@ actions:
         title: Success
         description: Was operation successful
         type: boolean
+        example: true
         required: true
   check_agent_status:
     title: Check Agent Status
@@ -234,19 +279,23 @@ actions:
         title: Is Currently Quarantined
         description: Is the device currently quarantined
         type: boolean
+        example: true
         required: true
       is_quarantine_requested:
         title: Is Quarantine Requested
         description: Is a quarantine action pending on this device
         type: boolean
+        example: true
         required: true
       is_unquarantine_requested:
         title: Is Unquarantine Requested
         description: Is there a pending request to release quarantine on this device
         type: boolean
+        example: true
         required: true
       is_asset_online:
         title: Is Asset Online
         description: Indicates that the agent is connected to the Insight platform. This means the device is powered on and is connected to Rapid7
         type: boolean
+        example: true
         required: true
