--- a/plugins/networktotal/plugin.spec.yaml
+++ b/plugins/networktotal/plugin.spec.yaml
@@ -4,10 +4,10 @@ products: [insightconnect]
 name: networktotal
 title: Network Total
 description: Upload a PCAP file for analysis, detecting viruses, worms, trojans and malware
-version: 1.0.1
+version: 2.0.0
 vendor: rapid7
 support: community
-status: []
+status: [obsolete]
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/networktotal
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
