Update komand -> insight_plugin_runtime

--- a/plugins/komand/Dockerfile
+++ b/plugins/komand/Dockerfile
@@ -1,10 +1,11 @@
-FROM komand/python-3-plugin:2
-# The three supported python parent images are:
-# - komand/python-2-plugin
-# - komand/python-3-plugin
-# - komand/python-pypy3-plugin
-#
-# Update the tag to a full semver version
+FROM rapid7/insightconnect-python-3-38-plugin:5
+LABEL organization=komand
+LABEL sdk=python
+LABEL type=plugin
+
+ENV SSL_CERT_FILE /etc/ssl/certs/ca-certificates.crt
+ENV SSL_CERT_DIR /etc/ssl/certs
+ENV REQUESTS_CA_BUNDLE  /etc/ssl/certs/ca-certificates.crt
 
 # Add any custom package dependencies here
 # NOTE: Add pip packages to requirements.txt
@@ -12,14 +13,17 @@ FROM komand/python-3-plugin:2
 # End package dependencies
 
 # Add source code
-WORKDIR /python/src
 ADD ./plugin.spec.yaml /plugin.spec.yaml
 ADD . /python/src
+
+WORKDIR /python/src
 
 # Install pip dependencies
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 # Install plugin
 RUN python setup.py build && python setup.py install
+
+USER nobody
 
 ENTRYPOINT ["/usr/local/bin/komand_komand"]
