--- a/plugins/cuckoo/plugin.spec.yaml
+++ b/plugins/cuckoo/plugin.spec.yaml
@@ -277,6 +277,7 @@ actions:
         description: URL to analyze (multipart encoded content)
         type: string
         required: true
+        example: www.example.com
     output:
       task_id:
         title: Task ID
