--- a/plugins/thehive/requirements.txt
+++ b/plugins/thehive/requirements.txt
@@ -2,5 +2,5 @@
 # All dependencies must be version-pinned, eg. requests==1.2.0
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
 python-magic==0.4.15
-requests>=2.20.0
-parameterized==0.9.0
+requests==2.20.0
+parameterized==0.8.1
