--- a/plugins/cuckoo/plugin.spec.yaml
+++ b/plugins/cuckoo/plugin.spec.yaml
@@ -5,7 +5,7 @@ name: cuckoo
 title: Cuckoo Sandbox
 description: "Cuckoo Sandbox is an open source automated malware analysis system. Using the Cuckoo Sandbox plugin for
 Rapid7 InsightConnect, users can analyze files and URLs, manage tasks, and more"
-version: 1.0.3
+version: 2.0.0
 supported_versions: ["2019-06-19"]
 vendor: rapid7
 support: community
@@ -310,6 +310,7 @@ actions:
         type: integer
         description: Submission ID
         required: false
+        example: 12345678910
       errors:
         type: '[]string'
         description: Errors if any
