--- a/plugins/cuckoo/plugin.spec.yaml
+++ b/plugins/cuckoo/plugin.spec.yaml
@@ -335,6 +335,7 @@ actions:
         type: '[]task'
         description: Cuckoo tasks
         required: true
+        example: [{ "completed" : 1,"pending": 1, "reported": 1, "running": 1, "total": 1}]
   view_task:
     title: View Task
     description: Returns details on the task associated with the specified ID
@@ -350,6 +351,7 @@ actions:
         type: task
         description: Cuckoo task
         required: true
+        example: {"task_id" : 1}
   reschedule_task:
     title: Reschedule Task
     description: Reschedule a task with the specified ID and priority (default priority
@@ -389,16 +391,19 @@ actions:
         description: Error true or false
         type: boolean
         required: true
+        example: true
       error_value:
         title: Error Message
         description: Error message
         type: string
         required: true
+        example: Error
       message:
         title: Message
         description: Message associated with status code
         type: string
         required: true
+        example: Bad Request
   get_report:
     title: Get Report
     description: Returns the report associated with the specified task ID
@@ -421,6 +426,7 @@ actions:
         type: bytes
         description: Base64 encoded report
         required: true
+        example: VGhpcyBpcyBhbiBleGFtcGxl
   get_screenshots:
     title: Get Screenshots
     description: Returns one (jpeg) or all (zip) screenshots associated with the specified
@@ -443,6 +449,7 @@ actions:
         type: bytes
         description: Base64 encoded screenshot
         required: true
+        example: VGhpcyBpcyBhbiBleGFtcGxl
   rerun_report:
     title: Re-run Reporting
     description: Re-run reporting for task associated with the specified task ID
@@ -458,6 +465,7 @@ actions:
         type: boolean
         description: Action success or failure
         required: true
+        example: true
   reboot_task:
     title: Reboot Task
     description: Add a reboot task to database from an existing analysis ID
@@ -480,6 +488,7 @@ actions:
         type: integer
         description: Reboot ID
         required: true
+        example: 1234678910
   list_memory:
     title: List Memory
     description: Returns a list of memory dump files or one memory dump file associated
@@ -497,6 +506,7 @@ actions:
         type: '[]string'
         description: Dumped Files
         required: true
+        example: ["Example file"]
   get_memory:
     title: Get Memory
     description: Returns one memory dump file associated with the specified task ID
@@ -519,6 +529,7 @@ actions:
         type: bytes
         description: Base64 encoded contents
         required: true
+        example: VGhpcyBpcyBhbiBleGFtcGxl
   view_file:
     title: View File
     description: Returns details on the file matching either the specified MD5 hash,
@@ -548,11 +559,13 @@ actions:
         type: data
         description: Data
         required: true
+        example: 3395856ce81f2b7382dee72602f798b642f14140
       error:
         title: Error
         type: boolean
         description: Error information
         required: true
+        example: true
   get_file:
     title: Get File
     description: Returns the binary content of the file matching the specified SHA256
@@ -569,6 +582,7 @@ actions:
         description: Binary contents
         type: bytes
         required: true
+        example: UmFwaWQ3IEluc2lnaHRDb25uZWN0Cg==
   get_pcap:
     title: Get PCAP
     description: Returns the content of the PCAP associated with the given task
@@ -584,6 +598,7 @@ actions:
         description: PCAP contents
         type: bytes
         required: true
+        example: UmFwaWQ3IEluc2lnaHRDb25uZWN0Cg==
   list_machines:
     title: List Machines
     description: Returns a list with details on the analysis machines available to
@@ -593,6 +608,7 @@ actions:
         description: List of machines available to Cuckoo
         type: '[]machine'
         required: true
+        example: ["Example Machine"]
   view_machine:
     title: View Machine
     description: Returns details on the analysis machine associated with the given
@@ -608,6 +624,7 @@ actions:
         description: Machine details
         type: machine
         required: true
+        example: Example Machine
   cuckoo_status:
     title: Cuckoo Status
     description: Returns status of the cuckoo server
@@ -617,28 +634,34 @@ actions:
         description: CPU load for the past 1, 5 and 15 minutes respectively
         type: '[]float'
         required: true
+        example: [0.123]
       diskspace:
         title: Diskspace
         description: Free, total and used diskspace of $CUCKOO/storage/analyses/,
           $CUCKOO/storage/binaries/, and specified tmppath
         type: diskspace
         required: true
+        example: 100
       hostname:
         type: string
         description: Cuckoo hostname
         required: true
+        example: Example Hostname
       machines:
         description: Details about available and total analysis machines
         type: machines
         required: true
+        example: {"available": 10, "total": 10}
       tasks:
         description: Details about analysis tasks
         type: tasks
         required: true
+        example: [{ "completed" : 1,"pending": 1, "reported": 1, "running": 1, "total": 1}]
       version:
         type: string
         description: Cuckoo version
         required: true
+        example: 2.0.7
   vpn_status:
     title: VPN Status
     description: Returns VPN status
@@ -648,6 +671,7 @@ actions:
         type: '[]vpn'
         description: VPN status array
         required: true
+        example: [{"name": "Example", "status": "Running"}]
   exit:
     title: Exit
     description: Shuts down the server if in debug mode and using the werkzeug server
@@ -656,3 +680,4 @@ actions:
         type: string
         description: Exit message
         required: true
+        example: "Exit Message"
